Setup fastlane for android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,9 @@ android {
         applicationId "com.ramdaplay"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.0.5"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -144,6 +145,14 @@ android {
         }
     }
     signingConfigs {
+        release {
+            if (project.hasProperty('RAMDA_UPLOAD_STORE_FILE')) {
+                storeFile file(RAMDA_UPLOAD_STORE_FILE)
+                storePassword RAMDA_UPLOAD_STORE_PASSWORD
+                keyAlias RAMDA_UPLOAD_KEY_ALIAS
+                keyPassword RAMDA_UPLOAD_KEY_PASSWORD
+            }
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -152,15 +161,15 @@ android {
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 
