--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^2.0.0-rc.3",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.1",
-    "@testing-library/react-native": "^7.1.0"
+    "react-native-screens": "^2.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0", 
+    "@react-native-community/eslint-config": "^1.1.0",
     "@twgdev/prettier-config": "^1.0.2",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "detox": "^18.6.2",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -51,6 +52,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^25.1.0",
+    "jest-circus": "^26.6.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
