--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/setup-node@v1
 
       - name: Use specific Java version for sdkmanager to work
-        uses: joschi/setup-jdk@v1
+        uses: actions/checkout@v2
+        uses: actions/setup-java@v1
         with:
-          java-version: 'openjdk8'
-          architecture: 'x64'
+          java-version: '9.0.4' # The JDK version to make available on the path.
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
 
       - name: Download Android Emulator Image
         run: |
