--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test-fastlane-android": "cd ./android && bundle exec fastlane android test",
-    "build-detox-android": "detox build -c android.emu.debug",
-    "test-detox-android": "detox test -c android.emu.debug"
+    "build-detox-android": "detox build -c android.emu.release",
+    "test-detox-android": "detox test -c android.emu.release"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
