--- a/.detoxrc.json
+++ b/.detoxrc.json
@@ -20,15 +20,23 @@
     },
     "ios.sim.release": {
       "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/RamdaPlay.app",
-      "build": "export CODE_SIGNING_REQUIRED=NO && export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseModernBuildSystem=YES -arch x86_64 -scheme RamdaPlay -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet",
+      "build": "xcodebuild -workspace ios/RamdaPlay.xcworkspace -scheme RamdaPlay -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
       "type": "ios.simulator",
       "device": {
-        "type": "iPhone 11"
+        "type": "iPhone 8"
       }
     },
     "ios.sim.debug": {
       "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/RamdaPlay.app",
       "build": "xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseNewBuildSystem=NO -scheme RamdaPlay -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -quiet",
+      "type": "ios.simulator",
+      "device": {
+        "type": "iPhone 11"
+      }
+    },
+    "ios.sim.releaseLocal": {
+      "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/RamdaPlay.app",
+      "build": "export CODE_SIGNING_REQUIRED=NO && export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseModernBuildSystem=YES -arch x86_64 -scheme RamdaPlay -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet",
       "type": "ios.simulator",
       "device": {
         "type": "iPhone 11"
