--- a/e2e/config.json
+++ b/e2e/config.json
@@ -1,8 +1,6 @@
 {
-    "testEnvironment": "./environment",
-    "testRunner": "jest-circus/runner",
-    "testTimeout": 120000,
-    "testRegex": "\\.e2e\\.js$",
+    "setupFilesAfterEnv": ["./init.js"],
+    "testEnvironment": "node",
     "reporters": ["detox/runners/jest/streamlineReporter"],
     "verbose": true
-}
+  }
