--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -47,5 +47,5 @@ jobs:
           cd ios && pod install && cd ..
       - run: brew tap wix/brew
       - run: brew install applesimutils
-      - run: yarn detox build e2e --configuration ios.sim.release
-      - run: yarn detox test e2e --configuration ios.sim.release --cleanup --debug-synchronization 200
+      - run: yarn detox build e2e --configuration ios.sim.debug
+      - run: yarn detox test e2e --configuration ios.sim.debug --cleanup --debug-synchronization 200
