--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-name: iOS
+name: iOS-Detox-e2e-test
 
 on: [push]
 
@@ -47,5 +47,5 @@ jobs:
           cd ios && pod install && cd ..
       - run: brew tap wix/brew
       - run: brew install applesimutils
-      - run: yarn detox build e2e --configuration ios.sim.releaseLocal
-      - run: yarn detox test e2e --configuration ios.sim.releaseLocal --cleanup --debug-synchronization 200
+      - run: yarn detox build e2e --configuration ios.sim.release
+      - run: yarn detox test e2e --configuration ios.sim.release --cleanup --debug-synchronization 200
