--- a/package.json
+++ b/package.json
@@ -9,21 +9,15 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test-fastlane-android": "cd ./android && bundle exec fastlane android test",
-    "build-detox-ios:local": "detox build -c ios.sim.releaseLocal -l verbose", 
-    "test-detox-ios:local": "detox test -c ios.sim.releaseLocal -l verbose",
     "build-detox-ios": "detox build -c ios.sim.release",
     "test-detox-ios": "detox test -c ios.sim.release",
-    "build-detox-android:local": "detox build -c android.emu.release -l verbose",
-    "test-detox-android:local": "detox test -c android.emu.release -l verbose",
-    "build-detox-android": "detox build -c android.emu.debug",
-    "test-detox-android": "detox test -c android.emu.debug"
+    "build-detox-android": "detox build -c android.emu.release -l verbose",
+    "test-detox-android": "detox test -c android.emu.release -l verbose"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
-    "@testing-library/jest-native": "^3.4.3",
-    "@testing-library/react-native": "^7.1.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -60,12 +54,13 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^25.1.0",
-    "jest-circus": "^26.6.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
     "ts-jest": "^26.5.2",
-    "typescript": "^4.1.4"
+    "typescript": "^4.1.4",
+    "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0"
   },
   "jest": {
     "preset": "react-native",
@@ -87,49 +82,6 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
-    }
-  },
-  "detox": {
-    "testRunner": "jest",
-    "configurations": {
-      "android.emu.debug": {
-        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
-        "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
-        "type": "android.emulator",
-        "name": "emu"
-      },
-      "android.emu.release": {
-        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-        "build": "cd android && ./gradlew app:assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
-        "type": "android.emulator",
-        "device": {
-          "avdName": "Nexus_5X_API_29"
-        }
-      },
-      "ios.sim.release": {
-        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/RamdaPlay.app",
-        "build": "export CODE_SIGNING_REQUIRED=NO && xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseModernBuildSystem=YES -arch x86_64 -scheme RamdaPlay -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
-        "type": "ios.simulator",
-        "device": {
-          "type": "iPhone 11"
-        }
-      },
-      "ios.sim.debug": {
-        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/RamdaPlay.app",
-        "build": "xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseNewBuildSystem=NO -scheme RamdaPlay -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -quiet",
-        "type": "ios.simulator",
-        "device": {
-          "type": "iPhone 11"
-        }
-      },
-      "ios.sim.releaseLocal": {
-        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/RamdaPlay.app",
-        "build": "export CODE_SIGNING_REQUIRED=NO && export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -workspace ios/RamdaPlay.xcworkspace -UseModernBuildSystem=YES -arch x86_64 -scheme RamdaPlay -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet",
-        "type": "ios.simulator",
-        "device": {
-          "type": "iPhone 11"
-        }
-      }
     }
   }
 }
