--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
       "json",
       "node"
     ],
+    "testPathIgnorePatterns" : [
+      "<rootDir>/e2e" 
+    ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
