--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,49 +1,49 @@
-name: Android-Detox-e2e-test
+# name: Android-Detox-e2e-test
 
-on: [push]
+# on: [push]
 
-jobs:
-  build:
-    runs-on: macos-latest
-    timeout-minutes: 25
+# jobs:
+#   build:
+#     runs-on: macos-latest
+#     timeout-minutes: 25
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v1
+#         with:
+#           fetch-depth: 1
 
-      - name: Node
-        uses: actions/setup-node@v1
+#       - name: Node
+#         uses: actions/setup-node@v1
 
-      - name: Use specific Java version for sdkmanager to work
-        uses: joschi/setup-jdk@v1
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        with:
-          java-version: 'openjdk8'
-          architecture: 'x64'
+#       - name: Use specific Java version for sdkmanager to work
+#         uses: joschi/setup-jdk@v1
+#         env:
+#           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+#         with:
+#           java-version: 'openjdk8'
+#           architecture: 'x64'
 
-      - name: Download Android Emulator Image
-        run: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-29;google_apis;x86"
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name emu --device "Nexus 5X" -k 'system-images;android-29;google_apis;x86'
-          $ANDROID_HOME/emulator/emulator -list-avds
-      - name: Install node_modules
-        run: |
-          yarn install --frozen-lockfile
+#       - name: Download Android Emulator Image
+#         run: |
+#           echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-29;google_apis;x86"
+#           echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name emu --device "Nexus 5X" -k 'system-images;android-29;google_apis;x86'
+#           $ANDROID_HOME/emulator/emulator -list-avds
+#       - name: Install node_modules
+#         run: |
+#           yarn install --frozen-lockfile
 
-      - name: Build for detox
-        run: |
-          yarn detox build -c android.emu.debug
-      - name: Android Emulator
-        timeout-minutes: 20
-        continue-on-error: true
-        run: |
-          echo "Starting emulator"
-          nohup $ANDROID_HOME/emulator/emulator -avd emu -no-audio -no-snapshot -no-window &
-          $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-          $ANDROID_HOME/platform-tools/adb devices
-          echo "Emulator started"
-      - name: Android Detox
-        run: yarn start & yarn detox test -c android.emu.debug
+#       - name: Build for detox
+#         run: |
+#           yarn detox build -c android.emu.debug
+#       - name: Android Emulator
+#         timeout-minutes: 20
+#         continue-on-error: true
+#         run: |
+#           echo "Starting emulator"
+#           nohup $ANDROID_HOME/emulator/emulator -avd emu -no-audio -no-snapshot -no-window &
+#           $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+#           $ANDROID_HOME/platform-tools/adb devices
+#           echo "Emulator started"
+#       - name: Android Detox
+#         run: yarn start & yarn detox test -c android.emu.debug
