--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --config .prettierrc --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "type-check": "tsc --noEmit",
     "test-fastlane-android": "cd ./android && bundle exec fastlane android test",
     "build-detox-ios": "detox build -c ios.sim.release",
     "test-detox-ios": "detox test -c ios.sim.release",
