--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
   "compilerOptions": {
     "jsx": "react",
     "typeRoots": ["node_modules/@types"],
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "skipLibCheck": true
   },
 }
  
