--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,8 +10,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: yarn
-        run: yarn
+      - uses: c-hive/gha-yarn-cache@v1
+      - name: Install node modules
+        run: |
+          yarn install
       - name: lint
         run: yarn lint
       - name: type-check
